--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@joi/date": "^2.1.0",
     "axios": "^1.4.0",
     "express": "^4.18.2",
+    "express-response-formatter": "^2.0.2",
     "joi": "^17.9.2",
     "mysql2": "^3.2.4",
     "nodemon": "^2.0.22",
