--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "dependencies": {
     "@joi/date": "^2.1.0",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-response-formatter": "^2.0.2",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.4",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.0"
