--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web Service E Commerce Add ons",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "@joi/date": "^2.1.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-response-formatter": "^2.0.2",
     "joi": "^17.9.2",
