--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
   },
   "homepage": "https://github.com/aaronlinggo/WS-Ecommerce-addons#readme",
   "dependencies": {
-    "@joi/date": "^2.1.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-response-formatter": "^2.0.2",
-    "joi": "^17.9.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.4",
