--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /node_modules
-# /storage/aaronlinggo/*
-# /storage/cyrellew/*
-# /storage/felput/*
-# /storage/alaskar/*
+/storage/aaronlinggo/*
+/storage/cyrellew/*
+/storage/felput/*
+/storage/alaskar/*
