--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "express-response-formatter": "^2.0.2",
     "express-validator": "^7.0.1",
+    "fast-csv": "^4.3.6",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
