--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql2": "^3.2.4",
     "node-cron": "^3.0.2",
     "nodemon": "^2.0.22",
+    "pdfkit": "^0.13.0",
     "sequelize": "^6.31.0"
   },
   "devDependencies": {
