Update ENV for Email

--- a/.env
+++ b/.env
@@ -9,3 +9,12 @@ DB_DATABASE_PRODUCTION = database_production
 
 JWT_KEY = PRpqTFM1R61pUX3QVohZACQ81rnMAZ3ZitNl7m6N
 RAJAONGKIR_KEY = bb7d3f86e4e416fcae04cdb2e9abf46b
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME='wsaddonstore@gmail.com'
+MAIL_PASSWORD='rugwrvufhkyuvuyn'
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="wsaddonstore@gmail.com"
+MAIL_FROM_NAME="${APP_NAME}"
