Create Email Verification (masih error)

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "nodemailer": "^6.9.2",
     "nodemon": "^2.0.22",
     "pdfkit": "^0.13.0",
-    "sequelize": "^6.31.0"
+    "sequelize": "^6.31.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
