--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ RAJAONGKIR_KEY = bb7d3f86e4e416fcae04cdb2e9abf46b
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
+MAIL_SERVICE = gmail
 MAIL_USERNAME='wsaddonstore@gmail.com'
 MAIL_PASSWORD='rugwrvufhkyuvuyn'
 MAIL_ENCRYPTION=ssl
