--- a/.env example
+++ b/.env example
@@ -1,9 +1,9 @@
 NODE_ENV = development
-DB_USERNAME = addonsto_admin
-DB_PASSWORD = wsaddonstore123.
-DB_HOST = 103.55.39.38
+DB_USERNAME = root
+DB_PASSWORD = 
+DB_HOST = 127.0.0.1
 DB_DIALECT = mysql
-DB_DATABASE_DEVELOPMENT = addonsto_ws_ecommerce_add_ons_development
+DB_DATABASE_DEVELOPMENT = ws_ecommerce_add_ons_development
 DB_DATABASE_TEST = database_test
 DB_DATABASE_PRODUCTION = database_production
 
