--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
-NODE_ENV = development
-DB_USERNAME = addonsto_admin
-DB_PASSWORD = wsaddonstore123.
-DB_HOST = 103.55.39.38
-DB_DIALECT = mysql
-DB_DATABASE_DEVELOPMENT = addonsto_ws_ecommerce_add_ons_development
-DB_DATABASE_TEST = database_test
-DB_DATABASE_PRODUCTION = database_production
+NODE_ENV=development
+DB_USERNAME=addonsto_admin
+DB_PASSWORD=wsaddonstore123.
+DB_HOST=103.55.39.38
+DB_DIALECT=mysql
+DB_DATABASE_DEVELOPMENT=addonsto_ws_ecommerce_add_ons_development
+DB_DATABASE_TEST=database_test
+DB_DATABASE_PRODUCTION=database_production
 
-JWT_KEY = PRpqTFM1R61pUX3QVohZACQ81rnMAZ3ZitNl7m6N
-RAJAONGKIR_KEY = bb7d3f86e4e416fcae04cdb2e9abf46b
+JWT_KEY=PRpqTFM1R61pUX3QVohZACQ81rnMAZ3ZitNl7m6N
+RAJAONGKIR_KEY=bb7d3f86e4e416fcae04cdb2e9abf46b
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_SERVICE = gmail
+MAIL_SERVICE=gmail
 MAIL_USERNAME='wsaddonstore@gmail.com'
 MAIL_PASSWORD='rugwrvufhkyuvuyn'
 MAIL_ENCRYPTION=ssl
